--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,6 @@ h1, h2, h3, p {
     margin: 0;
 }
 
-
 /* apply styles to <header> */
 header {
   padding: 20px 35px;
@@ -212,6 +211,7 @@ main {
   font-size: large;
   background-color: var(--primary-color);
   color: var(--secondary-color);
+  margin-bottom: 0px;
 }
 /* Grid End*/
 
